tests/ui/feature-gates/feature-gate-abi-x86-interrupt.stderr
error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:10:8
   |
LL | extern "x86-interrupt" fn f7(_p: *const u8) {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:12:12
   |
LL |     extern "x86-interrupt" fn m7(_p: *const u8);
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:13:12
   |
LL |     extern "x86-interrupt" fn dm7(_p: *const u8) {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:20:12
   |
LL |     extern "x86-interrupt" fn m7(_p: *const u8) {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:25:12
   |
LL |     extern "x86-interrupt" fn im7(_p: *const u8) {}
   |            ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:28:18
   |
LL | type A7 = extern "x86-interrupt" fn();
   |                  ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "x86-interrupt" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi-x86-interrupt.rs:30:8
   |
LL | extern "x86-interrupt" {}
   |        ^^^^^^^^^^^^^^^
   |
   = note: see issue #40180 <https://github.com/rust-lang/rust/issues/40180> for more information
   = help: add `#![feature(abi_x86_interrupt)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
